--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,14 @@ body {
   font-family: "Inter", sans-serif;
 }
 
+.App {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+
 /* header */
 
 .header {
@@ -18,6 +26,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  margin-bottom: 50px;
 }
 
 .header__icon {
@@ -33,4 +43,93 @@ body {
   line-height: 18px;
   letter-spacing: -0.075em;
   color: #ffffff;
+}
+
+/* cards */
+
+.card__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  max-width: 470px;
+  display: flex;
+  margin-inline: 40px;
+  margin-bottom: 18px;
+}
+
+.card__line {
+  width: 90%;
+  height: 1px;
+  background-color: #f5f5f5;
+  margin-bottom: 18px;
+}
+
+.card__image {
+  width: 125px;
+  height: 164px;
+  border-radius: 5px;
+  object-fit: cover;
+  object-position: left;
+  margin-right: 20px;
+}
+
+.card__content__location {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 4px;
+
+  margin-top: 10px;
+  margin-bottom: 4px;
+}
+
+.content__location__icon {
+  font-size: 10px;
+  color: #f55a5a;
+}
+
+.content__location__text {
+  text-transform: uppercase;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 12px;
+  letter-spacing: 0.17em;
+
+  padding-right: 7px;
+}
+
+.content__location__link {
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 12px;
+  letter-spacing: 0em;
+  color: #918e9b;
+}
+
+.card__content__title {
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0em;
+
+  margin-bottom: 14px;
+}
+
+.card__content__dates {
+  font-size: 10px;
+  font-weight: 700;
+  line-height: 12px;
+  letter-spacing: 0em;
+  margin-bottom: 9px;
+}
+
+.card__content__description {
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 15px;
+  letter-spacing: 0em;
 }
